--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
 
   <!--Banner-->
   <div class="banner-outer">
-    <section class="banner index" style="background-image: url(img/banner-home.png);">&nbsp;</section>
+    <div id="bannerSlider">
+      <section class="banner index" style="background-image: url(img/banner-home.png);">&nbsp;</section>
+      <section class="banner index" style="background-image: url(img/banner-home.png);">&nbsp;</section>
+      <section class="banner index" style="background-image: url(img/banner-home.png);">&nbsp;</section>
+    </div>
     <div class="desktop-view-center z-index-banner-underneath">
       <div id="homeBannerSlider" class="banner-slider">
         <div class="banner-slider-item">
@@ -210,10 +214,26 @@
       </div>
       <div class="col-md-6">
         <div class="f-max-width-half">
-          <h4 class="big-bottom-gap">Causerr Charity Stories</h4>
-          <h3 class="color-title-h3">Meet Chris</h3>
-          <h4>Christ raised $70k</h4>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+          <div id="causerrCopy">
+            <div>
+              <h4 class="big-bottom-gap">Causerr Charity Stories</h4>
+              <h3 class="color-title-h3">Meet Chris</h3>
+              <h4>Christ raised $70k</h4>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+            </div>
+            <div>
+              <h4 class="big-bottom-gap">Causerr Charity Stories</h4>
+              <h3 class="color-title-h3">Meet Chris</h3>
+              <h4>Christ raised $70k</h4>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+            </div>
+            <div>
+              <h4 class="big-bottom-gap">Causerr Charity Stories</h4>
+              <h3 class="color-title-h3">Meet Chris</h3>
+              <h4>Christ raised $70k</h4>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
